<resources>
    <string name="app_name">MyFrames</string>
    <string name="flow_layout">流式布局</string>
    <string name="reminder">请打开侧边栏以查看功能</string>
    <string name="add_picture">添加图片</string>
    <string name="water_fall_layout">瀑布流布局</string>
    <string name="sidebar">酷炫侧边栏</string>
    <string name="circle_progress_bar">圆形进度条</string>
    <string name="google_map">谷歌地图</string>
    <string name="histogram">柱状图</string>
    <string name="other">其他</string>
    <string name="chart">图表</string>
</resources>
